Revert "remove unused code"
This reverts commit c7a85483bdb3c2a125ad1b36d4e1fd8caeaafa3e.