@@ -28,9 +28,11 @@
 package org.hisp.dhis.programrule.action.validation;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
+import javax.annotation.Nonnull;
 import lombok.extern.slf4j.Slf4j;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.feedback.ErrorCode;
@@ -110,11 +112,7 @@ public class BaseProgramRuleActionValidator implements ProgramRuleActionValidato
           .build();
     }
 
-    List<ProgramStage> stages =
-        validationContext
-            .getProgramRuleActionValidationService()
-            .getProgramStageService()
-            .getProgramStagesByProgram(program);
+    List<ProgramStage> stages = getRequiredProgramStages(validationContext, program);
 
     Set<String> dataElements =
         stages.stream()
@@ -166,7 +164,9 @@ public class BaseProgramRuleActionValidator implements ProgramRuleActionValidato
     }
 
     List<String> trackedEntityAttributes =
-        program.getProgramAttributes().stream().map(att -> att.getAttribute().getUid()).toList();
+        program.getProgramAttributes().stream()
+            .map(att -> att.getAttribute().getUid())
+            .collect(Collectors.toList());
 
     if (!trackedEntityAttributes.contains(attribute.getUid())) {
       log.debug(
@@ -186,5 +186,40 @@ public class BaseProgramRuleActionValidator implements ProgramRuleActionValidato
     }
 
     return ProgramRuleActionValidationResult.builder().valid(true).build();
+  }
+
+  private List<ProgramStage> getRequiredProgramStages(
+      @Nonnull ProgramRuleActionValidationContext validationContext, @Nonnull Program program) {
+    List<ProgramStage> availableStages = validationContext.getProgramStages();
+
+    if (hasAllProgramStages(availableStages, program)) {
+      return availableStages;
+    }
+
+    return validationContext
+        .getProgramRuleActionValidationService()
+        .getProgramStageService()
+        .getProgramStagesByProgram(program);
+  }
+
+  private boolean hasAllProgramStages(
+      @Nonnull List<ProgramStage> availableStages, @Nonnull Program program) {
+    if (program.getProgramStages() == null) {
+      return false;
+    }
+
+    Set<String> availableStageIds =
+        availableStages.stream()
+            .filter(Objects::nonNull)
+            .map(ProgramStage::getUid)
+            .collect(Collectors.toSet());
+
+    Set<String> allProgramStageIds =
+        program.getProgramStages().stream()
+            .filter(Objects::nonNull)
+            .map(ProgramStage::getUid)
+            .collect(Collectors.toSet());
+
+    return availableStageIds.containsAll(allProgramStageIds);
   }
 }
